--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,10 @@
 <body>
     <div class="navBar">
         <a class="home" href="./home.html"> Home</a>
+        <a class="gitHub" href="https://github.com/CeciliaCodes" target="_blank"> GitHub</a>
         <a class="linkedIn" href="https://www.linkedin.com/in/ceciliaparrish/" target="_blank"> LinkedIn</a>
         <a class="contact" href="./contact.html" target="_blank"> Contact</a>
+        <a class="resume" href="./Cecilia Parrish Resume WD.pdf" target="_blank">Resume</a>
     </div>
 
     <div class="container">
