changed home link
directed home link to index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class="navBar">
-        <a class="home" href="./home.html"> Home</a>
+        <a class="home" href="./index.html"> Home</a>
         <a class="gitHub" href="https://github.com/CeciliaCodes" target="_blank"> GitHub</a>
         <a class="linkedIn" href="https://www.linkedin.com/in/ceciliaparrish/" target="_blank"> LinkedIn</a>
         <a class="contact" href="./contact.html" target="_blank"> Contact</a>
